add details to constructor helper

--- a/sample.html
+++ b/sample.html
@@ -94,7 +94,7 @@
   <field type="separator" label="Slider properties"></field>
   <field type="number"    label="Items per rows" target="data-nbitems" value="1" helper="Set the number of items to display at once. Items can't have a width lesser than 300px, so this parameter will be downwarded if too high."></field>
   <field type="empty"></field>
-  <field type="checkbox"  label="Loop" target="data-loop" selected="true" helper="The user can loop throught the slider items"></field>
+  <field type="checkbox"  label="Loop" target="data-loop" selected="true" helper="The user can loop throught the slider items. Works only if there is more than 2 items"></field>
   <field type="checkbox"  label="Autoplay" target="data-auto" selected=""></field>
 
   <field type="separator" label="Animation properties"></field>
