improve title class performance, create class sliderFW__item__title

--- a/sample.html
+++ b/sample.html
@@ -7,7 +7,7 @@
         </div>
         <div class="sliderFW__item__content">
           <div class="sliderFW__item__content__wrapper">
-            <h3>Lorem ipsum 1 </h3>
+            <h3 class="sliderFW__item__title">Lorem ipsum 1 </h3>
             <p>Lorem ipsum dolor sit amet</p>
             <button class="btn-bg-secondary">Lorem</button>
           </div>
@@ -19,7 +19,7 @@
         </div>
         <div class="sliderFW__item__content">
           <div class="sliderFW__item__content__wrapper">
-            <h3>Lorem ipsum 2</h3>
+            <h3 class="sliderFW__item__title">Lorem ipsum 2</h3>
             <p>Lorem ipsum dolor sit amet</p>
             <button class="btn-bg-secondary">Lorem</button>
           </div>
@@ -31,7 +31,7 @@
         </div>
         <div class="sliderFW__item__content">
           <div class="sliderFW__item__content__wrapper">
-            <h3>Lorem ipsum 3</h3>
+            <h3 class="sliderFW__item__title">Lorem ipsum 3</h3>
             <p>Lorem ipsum dolor sit amet</p>
             <button class="btn-bg-secondary">Lorem</button>
           </div>
@@ -43,7 +43,7 @@
         </div>
         <div class="sliderFW__item__content">
           <div class="sliderFW__item__content__wrapper">
-            <h3>Lorem ipsum 3</h3>
+            <h3 class="sliderFW__item__title">Lorem ipsum 3</h3>
             <p>Lorem ipsum dolor sit amet</p>
             <button class="btn-bg-secondary">Lorem</button>
           </div>
@@ -55,7 +55,7 @@
         </div>
         <div class="sliderFW__item__content">
           <div class="sliderFW__item__content__wrapper">
-            <h3>Lorem ipsum 3</h3>
+            <h3 class="sliderFW__item__title">Lorem ipsum 3</h3>
             <p>Lorem ipsum dolor sit amet</p>
             <button class="btn-bg-secondary">Lorem</button>
           </div>
@@ -67,7 +67,7 @@
         </div>
         <div class="sliderFW__item__content">
           <div class="sliderFW__item__content__wrapper">
-            <h3>Lorem ipsum 3</h3>
+            <h3 class="sliderFW__item__title">Lorem ipsum 3</h3>
             <p>Lorem ipsum dolor sit amet</p>
             <button class="btn-bg-secondary">Lorem</button>
           </div>
@@ -79,7 +79,7 @@
         </div>
         <div class="sliderFW__item__content">
           <div class="sliderFW__item__content__wrapper">
-            <h3>Lorem ipsum 3</h3>
+            <h3 class="sliderFW__item__title">Lorem ipsum 3</h3>
             <p>Lorem ipsum dolor sit amet</p>
             <button class="btn-bg-secondary">Lorem</button>
           </div>
