--- a/sample.html
+++ b/sample.html
@@ -1,20 +1,22 @@
 <div class="sliderFW" 
-  data-mode     = "slider" 
-  data-auto     = "false" 
-  data-loop     = "false" 
-  data-delay    = "500" 
-  data-duration = "250" 
-  data-function = "ease" 
-  data-nbitems  = "3"
-  data-gap      = "1em" 
-  data-step     = "3"
+  data-mode       = "" 
+  data-auto       = "" 
+  data-loop       = ""
+  data-delay      = "" 
+  data-transition = ""
+  data-duration   = "" 
+  data-function   = "" 
+  data-nbitems    = ""
+  data-gap        = "" 
+  data-step       = ""
 >
   <div class="sliderFW__item">
     <div class="sliderFW__item__bg">
       <img src="https://picsum.photos/id/10/800/400" alt="sample image">
     </div>
     <div class="sliderFW__item__content">
-      <h1 class="txt-center p-all ft-white">1</h1>
+      <h1 class="ft-white">1</h1>
+      <p>Lorem ipsum dolor sir amet</p>
     </div>
   </div>
   <div class="sliderFW__item">
@@ -22,7 +24,8 @@
       <img src="https://picsum.photos/id/17/800/401" alt="sample image">
     </div>
     <div class="sliderFW__item__content">
-      <h1 class="txt-center p-all ft-white">2</h1>
+      <h1 class="ft-white">2</h1>
+      <p>Lorem ipsum dolor sir amet</p>
     </div>
   </div>
   <div class="sliderFW__item">
@@ -30,7 +33,8 @@
       <img src="https://picsum.photos/id/19/800/402" alt="sample image">
     </div>
     <div class="sliderFW__item__content">
-      <h1 class="txt-center p-all ft-black">3</h1>
+      <h1 class="ft-black">3</h1>
+      <p>Lorem ipsum dolor sir amet</p>
     </div>
   </div>
   <div class="sliderFW__item">
@@ -38,7 +42,8 @@
       <img src="https://picsum.photos/id/25/800/400" alt="sample image">
     </div>
     <div class="sliderFW__item__content">
-      <h1 class="txt-center p-all ft-black">4</h1>
+      <h1 class="ft-black">4</h1>
+      <p>Lorem ipsum dolor sir amet</p>
     </div>
   </div>
 </div>
@@ -48,21 +53,28 @@
   <field 
     type="select"      
     label="Mode"              
-    target="data-mode" values="slider,carrousel" labels="Slider,Carrousel" selected="carrousel"
+    target="data-mode" values="slider,carrousel" labels="Slider,Carrousel" selected=""
+    helper="Default mode is <i>slider</i>. The <i>caroussel</i> mode comes with predefined configuration wich may override user's ones"
    ></field>
-  <field type="empty" ></field>
+   <field 
+     type="select"      
+     label="Transition"           
+     target="data-transition" values="translate,fade,none" labels="translate,fade,none" selected=""                                           
+     helper="Define the type of transition between items (default translate)"
+    ></field>
+  <!-- <field type="empty" ></field> -->
   <field 
     type="number"      
     label="Items per rows"       
     target="data-nbitems"       
-    value="4"                                                                                                    
+    value="2"                                                                                                    
     helper="Set the number of items to display at once. Items can't have a width lesser than 300px, so this parameter will be downwarded if too high."
    ></field>
    <field 
      type="number"      
      label="Step"             
      target="data-step"      
-     value="3" 
+     value="" 
      helper="Set the number of items for each animation (default 1). Can't be superior to the number of items per row, and will be downgraded if needed."
     ></field>
   <field 
@@ -76,7 +88,7 @@
     type="text"      
     label="Items gap"      
     target="data-gap"   
-    value="1em"                                                                                                     
+    value=""                                                                                                     
     helper="Set the gap between items (default 0px)"
    ></field>
   <!-- <field type="empty" ></field> -->
@@ -85,7 +97,7 @@
     label="Loop"                 
     target="data-loop" 
     selected="true"                                                                                                       
-    helper="The user can loop throught the slider items. Works only if there is more than 2 items"
+    helper="The user can loop throught the slider items"
    ></field>
   <field 
     type="checkbox"    
@@ -102,18 +114,12 @@
    ></field>
 
   <field type="separator" label="Animation properties" ></field>
-  <field 
-    type="select"      
-    label="Transition"           
-    target="data-transition" values="translate,fade,none" labels="translate,fade,none" selected=""                                           
-    helper="Define the type of transition between items (default translate)"
-   ></field>
-  <field type="empty" ></field>
+  <!-- <field type="empty" ></field> -->
   <field 
     type="number"      
     label="Duration"             
     target="data-duration"      
-    value="1000" 
+    value="500" 
     step="100"                                                                                      
     helper="Set a custom duration for the transition selected (default is 1000ms)"
    ></field>
@@ -127,10 +133,36 @@
    ></field>
    <field 
     type="select"      
-    label="Function"           
+    label="Timing-function"           
     target="data-function" values="ease,ease-in,ease-out,ease-in-out,linear" labels="ease,ease-in,ease-out,ease-in-out,linear" selected=""
     helper="Define the type of animation timing function (default ease)"
    ></field>
+
+   <field type="separator" label="Content properties" ></field>
+   <field 
+     type="select"      
+     label="Vertical alignment"   
+     target="class" values="content--v--top,content--v--center,content--v--bottom"  labels="Top,Center,Bottom"  selected="" 
+     helper="Adjust the content position in the block"
+    ></field>
+   <field 
+     type="select"      
+     label="Horizontal alignment" 
+     target="class" values="content--h--left,content--h--center,content--h--right"  labels="Left,Center,Right"  selected=""   
+     helper="Adjust the content position in the block"
+    ></field>
+   <field 
+     type="select"      
+     label="Font color"           
+     target="class" values="ft-#colors" labels="#colors" selected="ft-white"                                                                  
+     helper="Set the content's font color"
+    ></field>
+   <field 
+     type="select"      
+     label="Title multiplier"     
+     target="class" values="title--1,title--2,title--3,title--4" labels="Display 1,Display 2,Display 3,Display 4" selected=""                 
+     helper="Apply a style that enlarge the title elements"
+    ></field>
 
 
 
@@ -168,9 +200,9 @@
     label="Arrows"               
     target="data-arrows" selected=""                                                                                                         
     helper="Add lateral arrows"
-   ></field> -->
+   ></field>
   
-  <!-- <field type="separator" label="Image properties" ></field>
+  <field type="separator" label="Image properties" ></field>
   <field 
     type="select"      
     label="Vertical alignment"   
@@ -192,33 +224,9 @@
    ></field> -->
 
 
-<!--   <field type="separator" label="Content properties" ></field>
-  <field 
-    type="select"      
-    label="Vertical alignment"   
-    target="class" values="content--v--top,content--v--center,content--v--bottom"  labels="Top,Center,Bottom"  selected="content--v--bottom" 
-    helper="Adjust the content position in the block"
-   ></field>
-  <field 
-    type="select"      
-    label="Horizontal alignment" 
-    target="class" values="content--h--left,content--h--center,content--h--right"  labels="Left,Center,Right"  selected="content--h--left"   
-    helper="Adjust the content position in the block"
-   ></field>
-  <field 
-    type="select"      
-    label="Font color"           
-    target="class" values="ft-#colors" labels="#colors" selected="ft-white"                                                                  
-    helper="Set the content's font color"
-   ></field>
-  <field 
-    type="select"      
-    label="Title multiplier"     
-    target="class" values="title--1,title--2,title--3,title--4" labels="Display 1,Display 2,Display 3,Display 4" selected=""                 
-    helper="Apply a style that enlarge the title elements"
-   ></field>
 
-  <field type="separator" label="Overlay properties" ></field>
+
+  <!-- <field type="separator" label="Overlay properties" ></field>
   <field 
     type="select"      
     label="Overlay color"        
@@ -231,7 +239,7 @@
     target="class" range="0-10" 
     value="6" prefix="content__bg__opacity--"                                                                    
     helper="Set transparency of picture's overlay. From 0 to 10, where 0 is non-visible and 10 is fully opaque."
-   ></field> -->
+   ></field> --> -->
 
 
   <!-- <field type="separator" label="Misc properties" ></field>
